--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,12 @@
 name: GitHub Actions Demo
 
+# on:
+#   workflow_dispatch: # 手动触发
+#   schedule:
+#     - cron: '*/5 * * * *'
+
 on:
-  workflow_dispatch: # 手动触发
+  push:
   schedule:
     - cron: '*/5 * * * *'
 
