--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,7 +3,7 @@ name: 'GitHub Actions Bot'
 on:
   push:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 * * * *'
 
 env:
   TEST_COOKIE: ${{ secrets.TEST_COOKIE }}
