--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,8 +2,8 @@ name: 'GitHub Actions Bot'
 
 on:
   push:
-  schedule:
-    - cron: '0 * * * *'
+  #schedule:
+    #- cron: '0 * * * *'
 
 env:
   TEST_COOKIE: ${{ secrets.TEST_COOKIE }}
